--- a/files/configs/GTSRB_CBM_config_STE.yaml
+++ b/files/configs/GTSRB_CBM_config_STE.yaml
@@ -1,14 +1,14 @@
 # this is from trial 243 in the optuna search trials
 seed: 42
 device: cuda
-device_no: 0
+device_no: 1
 print_freq: 30
 output_dir: experiments
 dataset:
     name: gtsrb
     n_labels: 43
     n_concepts: 43
-    batch_size: 64
+    batch_size: 128
     num_workers: 50
     shuffle_dataset: True
     pin_memory: True
@@ -18,7 +18,7 @@ dataset:
 concept_predictor:
     log_dir: logs
     checkpoint_dir: models
-    lr: 0.0001
+    lr: 0.007028926299376744
     epochs: 30
     lr_step: 10
     lr_gamma: 0.5
@@ -28,7 +28,7 @@ concept_predictor:
     freeze: False
     pretrained_weights: null
     criterion: bce_with_logits
-    optimizer: adam
+    optimizer: sgd
     scheduler: cosine_annealing
     scheduler_params: 
         T_max: 10
@@ -102,6 +102,28 @@ concept_predictor:
                             p: 8.63458846746744
                 params: 
                     shape_indices: [6,7,8,9]
+            between_two_and_three_numbers:
+                rule: BetweenTwoAndThreeNumbers
+                fuzzy_lambda: 0.5686343456383353
+                operators:
+                    t_norm:
+                        class_name: yager_t_norm
+                        params:
+                            p: 17.07648188149333
+                            eps: 1e-6
+                    t_conorm:
+                        class_name: yager_t_conorm
+                        params:
+                            p: 17.07648188149333
+                            eps: 1e-6
+                    a_aggregation:
+                        class_name: product_a_aggregation
+                    e_aggregation:
+                        class_name: generalized_mean_e_aggregation
+                        params:
+                            p: 17.07648188149333
+                params: 
+                    number_indices: [10,11,12,13,14,15,16,17]
             at_most_one_warning:
                 rule: AtMostOneWarning
                 fuzzy_lambda: 0.3776465828250607
@@ -226,8 +248,8 @@ label_predictor:
     early_stopping_patience: 10
     momentum: 0.9
     weight_decay: 5e-4
-    freeze: True
-    pretrained_weights: /vol/home-vol2/se/costajoa/Dokumente/trainFuzzy/files/models/gt_label_predictor/models/20251007_163247_label_predictor_best_model.pt
+    freeze: False
+    pretrained_weights: null
     criterion: cross_entropy
     optimizer: sgd
     scheduler: reduce_on_plateau
